--- a/first_ReadAndMovie/app.json
+++ b/first_ReadAndMovie/app.json
@@ -4,7 +4,7 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#b3d4db",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle":"black"
   }
